file path rename

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./skate-radness-presets.css">
-    <link rel="stylesheet" href="./skate radness.css">
-    <link rel="stylesheet" href="./skate-radnes-media.css">
+    <link rel="stylesheet" href="./code/skate-radness-presets.css">
+    <link rel="stylesheet" href="./code/skate radness.css">
+    <link rel="stylesheet" href="./code/skate-radnes-media.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +23,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/0d6f8c4c80.js" crossorigin="anonymous"></script>
-    <script defer src="skate radness.js"></script>
+    <script defer src="./code/skate radness.css"></script>
     <title>The Spot Skate Shop</title>
 </head>
 
