--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="banner">FREE GROUND SHIPPING ON ORDERS > $75 + FREE RETURNS</div>
         <nav class="nav">
           <div class="nav-left">
-            <a href="#"><img src="../images/skate-shop-logo.png" alt="the spot skate shop"></a>
+            <a href="#"><img src="./images/skate-shop-logo.png" alt="the spot skate shop"></a>
           </div>
           <div class="nav-middle">
             <div class="search-bar">
@@ -53,7 +53,7 @@
         <nav class="nav-2">
           <div class="nav-top">
             <div class="nav2-left">
-              <a href="#"><img src="../images/skate-shop-logo.png" alt="the spot skate shop"></a>
+              <a href="#"><img src="./images/skate-shop-logo.png" alt="the spot skate shop"></a>
             </div>
             <div class="nav2-right">
               <a href="#" style="color: var(--off-black);">ORDER TRACKING</a>
@@ -116,17 +116,17 @@
         <div class="slideshow-container" id="slider">
             <div class="mySlides fade">
               <div class="header-title">JanSport Backpacks</div>
-              <img src="../images/jansport-backpacks.jpg" alt="" style="width: 100%;">
+              <img src="./images/jansport-backpacks.jpg" alt="" style="width: 100%;">
               <p class="header-btn" style="width: 240px;">Shop Best Sellers</p>
             </div>
             <div class="mySlides fade">
               <div class="header-title">Shop Nike</div>
-              <img src="../images/parra-dunks.jpg" alt="" style="width: 100%;">
+              <img src="./images/parra-dunks.jpg" alt="" style="width: 100%;">
               <p class="header-btn">Nike SB Dunks</p>
             </div>
             <div class="mySlides fade">
               <div class="header-title">Zion Wright x Vans</div>
-              <img src="../images/Vans-Zahba-By-Zion-Wright.png" alt="" style="width: 100%;">
+              <img src="./images/Vans-Zahba-By-Zion-Wright.png" alt="" style="width: 100%;">
               <p class="header-btn">Vans Zahba</p>
             </div>
 
@@ -145,13 +145,13 @@
         <div class="brand-section container">
           <h1 class="section-title"><a href="">Our brands</a></h1>
           <section class="brands">
-              <img src="../images/BAKER.png" alt="brand" class="icon">
-              <img src="../images/INDEPENDENT.png" alt="brand" class="icon">
-              <img src="../images/NIKE.png" alt="brand" class="icon">
-              <img src="../images/VANS.png" alt="brand" class="icon">
-              <img src="../images/real-skateboards.jpg" alt="brand" class="icon">
-              <img src="../images/santa-cruz-skateboards.jpg" alt="brand" class="icon">
-              <img src="../images/dvs-shoes.jpg" alt="brand" class="icon">
+              <img src="./images/BAKER.png" alt="brand" class="icon">
+              <img src="./images/INDEPENDENT.png" alt="brand" class="icon">
+              <img src="./images/NIKE.png" alt="brand" class="icon">
+              <img src="./images/VANS.png" alt="brand" class="icon">
+              <img src="./images/real-skateboards.jpg" alt="brand" class="icon">
+              <img src="./images/santa-cruz-skateboards.jpg" alt="brand" class="icon">
+              <img src="./images/dvs-shoes.jpg" alt="brand" class="icon">
           </section>  
 
           <a class="see-all-brands-a" href="#" style="text-decoration: none;">
@@ -220,7 +220,7 @@
         <div class="sub-container">
           <h1><a href="">Shop the Collection</a></h1>
           <section class="learn-more container">
-              <img src="../images/ENJOITILE.jpg" alt="enjoi skateboards" class="learn-more__featured">
+              <img src="./images/ENJOITILE.jpg" alt="enjoi skateboards" class="learn-more__featured">
               <div class="about__details">
                   <h2 style="margin:0;">New Enjoi Decks</h2>
                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
@@ -230,7 +230,7 @@
           </section>
           <!-- COLLECTION -->
           <section class="learn-more-alt container">
-              <img src="../images/GIRLSANTILE.jpg" alt="enjoi skateboards" class="learn-more__featured">
+              <img src="./images/GIRLSANTILE.jpg" alt="enjoi skateboards" class="learn-more__featured">
               <div class="about__details">
                 <h2>Girls x Saniro</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
@@ -240,7 +240,7 @@
           </section>
           <!-- COLLECTION -->
           <section class="learn-more container">
-            <img src="../images/skate-clown-t-shirt-design.jpeg" alt="enjoi skateboards" class="learn-more__featured">
+            <img src="./images/skate-clown-t-shirt-design.jpeg" alt="enjoi skateboards" class="learn-more__featured">
             <div class="about__details">
                 <h2 style="margin:0;">New Shred IT Merch</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
@@ -272,20 +272,20 @@
         <!-- GALLERY -->
         <section class="skate-gallery container">
             <h2><i>Skate Grams</i></h2>
-            <a href="../images/HectorBermudez.jpeg" target="_blank"><img src="../images/HectorBermudez.jpeg" alt="skate"></a>
-            <a href="../images/RedVans.jpeg" target="_blank"><img src="../images/RedVans.jpeg" alt="skate"></a>
-            <a href="../images/JoseVicario.jpeg" target="_blank"><img src="../images/JoseVicario.jpeg" alt="skate"></a>
-            <a href="../images/1244608.jpg" target="_blank"><img src="../images/1244608.jpg" alt="skate"></a>
-            <a href="../images/SkateLand.jpeg" target="_blank"><img src="../images/SkateLand.jpeg" alt="skate"></a>
-            <a href="../images/Sunset.jpeg" target="_blank"><img src="../images/Sunset.jpeg" alt="skate"></a>
-            <a href="../images/skateboard-photography-tips-and-tricks-for-capturing-the-perfect-shot-1683308221553.jpg" target="_blank">
-              <img src="../images/skateboard-photography-tips-and-tricks-for-capturing-the-perfect-shot-1683308221553.jpg" alt="">
+            <a href="./images/HectorBermudez.jpeg" target="_blank"><img src="./images/HectorBermudez.jpeg" alt="skate"></a>
+            <a href="./images/RedVans.jpeg" target="_blank"><img src="./images/RedVans.jpeg" alt="skate"></a>
+            <a href="./images/JoseVicario.jpeg" target="_blank"><img src="./images/JoseVicario.jpeg" alt="skate"></a>
+            <a href="./images/1244608.jpg" target="_blank"><img src="./images/1244608.jpg" alt="skate"></a>
+            <a href="./images/SkateLand.jpeg" target="_blank"><img src="./images/SkateLand.jpeg" alt="skate"></a>
+            <a href="./images/Sunset.jpeg" target="_blank"><img src="./images/Sunset.jpeg" alt="skate"></a>
+            <a href="./images/skateboard-photography-tips-and-tricks-for-capturing-the-perfect-shot-1683308221553.jpg" target="_blank">
+              <img src="./images/skateboard-photography-tips-and-tricks-for-capturing-the-perfect-shot-1683308221553.jpg" alt="">
             </a>
-            <a href="../images/TravixUYewell.jpeg" target="_blank"><img src="../images/TravixUYewell.jpeg" alt="skate"></a>
-            <a href="../images/JakeHinds.jpeg" target="_blank"><img src="../images/JakeHinds.jpeg" alt="skate" style="height: 100%;"></a>
-            <a href="../images/DanielLincoln.jpeg" target="_blank"><img src="../images/DanielLincoln.jpeg" alt="skate"></a>
-            <a href="../images/DevinAvery.jpeg" target="_blank"><img src="../images/DevinAvery.jpeg" alt="skate"></a>
-            <a href="../images/ChenMizrack.jpeg" target="_blank"><img src="../images/ChenMizrack.jpeg" alt="skate" style="height: 100%;"></a>
+            <a href="./images/TravixUYewell.jpeg" target="_blank"><img src="./images/TravixUYewell.jpeg" alt="skate"></a>
+            <a href="./images/JakeHinds.jpeg" target="_blank"><img src="./images/JakeHinds.jpeg" alt="skate" style="height: 100%;"></a>
+            <a href="./images/DanielLincoln.jpeg" target="_blank"><img src="./images/DanielLincoln.jpeg" alt="skate"></a>
+            <a href="./images/DevinAvery.jpeg" target="_blank"><img src="./images/DevinAvery.jpeg" alt="skate"></a>
+            <a href="./images/ChenMizrack.jpeg" target="_blank"><img src="./images/ChenMizrack.jpeg" alt="skate" style="height: 100%;"></a>
         </section>
 
         <!-- FOOTER -->
@@ -307,7 +307,7 @@
             </div>
             <div class="footer-col f2">
               <h3>CONNECT</h3>
-              <a href="" style="text-align: center;"><img src="../images/skate-shop-logo.png" alt="the spot skate shop"></a>
+              <a href="" style="text-align: center;"><img src="./images/skate-shop-logo.png" alt="the spot skate shop"></a>
               <h4>Spot On Rewards</h4>
               <div class="footer-icons">  
                 <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube fa-lg" style="color: #292929;"></i></a>
