change file path

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/0d6f8c4c80.js" crossorigin="anonymous"></script>
-    <script defer src="./code/skate radness.css"></script>
+    <script defer src="./code/skate radness.js"></script>
     <title>The Spot Skate Shop</title>
 </head>
 
