--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./code/skate-radness-presets.css">
     <link rel="stylesheet" href="./code/skate radness.css">
     <link rel="stylesheet" href="./code/skate-radnes-media.css">
+    <link rel="shortcut icon" href="./images/skate-shop-logo.png" type="image/png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
